Fix cmake test option

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS on)
 
 set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -DDEBUG")
 
-option(RLOG_BUILD_TESTS "Build log tests" off)
+option(RLOG_BUILD_TESTS "Build tests" off)
 
 project(
   rlog
@@ -17,7 +17,7 @@ project(
 add_library(rlog src/rlog.c)
 target_include_directories(rlog PUBLIC inc/)
 
-if(LOG_BUILD_TESTS)
+if(RLOG_BUILD_TESTS)
 
   add_executable(rlog_tests tests/tests.c)
   target_link_libraries(rlog_tests PRIVATE rlog)
